--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "vite": "^4.4.5"
   },
   "eslintConfig": {
-    "extends": "standard"
+    "extends": "./node_modules/standard/eslintrc.json"
   }
 }
