core : add monaco editor [htm/css]

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
+  },
+  "dependencies": {
+    "monaco-editor": "0.41.0"
   }
 }
